# pushover-mcp-server

./: .gitignore  .pypirc.example  Dockerfile  LICENSE  README.md  config.example.json  docker-compose.yml  pyproject.toml
claude/: .mcp.json  CLAUDE.md
cursor/: mcp.json
cursor/rules/: pushover-notifications.mdc
src/pushover_mcp/: __init__.py  client.py  config.py  server.py
tests/: __init__.py  test_client.py  test_config.py
