[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pushover-mcp"
version = "0.1.0"
description = "MCP server for Pushover notifications"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "mgill" }
]
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
    "click>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-httpx>=0.30.0",
]

[project.scripts]
pushover-mcp = "pushover_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/pushover_mcp"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "function"
